@@ -1,5 +1,11 @@
 2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
+	* soap-client.el (soap-time-format): Remove variable.
+	(soap-encode-xs-basic-type): Simplify date-time format detection.
+	(soap-decode-xs-basic-type): Remove soap-time-format support.
+
+2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
 	* soap-client.el (soap-process-url-response): New function.
 	(soap-fetch-xml-from-url): Call soap-process-url-response.
 	(soap-parse-wsdl-phase-1): New function.
